--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -28,14 +28,14 @@
         <Label Grid.Row="1" Grid.Column="4" Content="Altura"/>
         <Label Grid.Row="2" Grid.Column="0" Content="Cubo 1"/>
         <Label Grid.Row="3" Grid.Column="0" Content="Cubo 2"/>
-        <TextBox Grid.Row="2" Grid.Column="1" TextChanged="TextBox_TextChanged" x:Name="X1" Uid="0"></TextBox>
-        <TextBox Grid.Row="2" Grid.Column="2" TextChanged="TextBox_TextChanged" x:Name="Y1" Uid="1"></TextBox>
-        <TextBox Grid.Row="2" Grid.Column="3" TextChanged="TextBox_TextChanged" x:Name="Z1" Uid="2"></TextBox>
-        <TextBox Grid.Row="2" Grid.Column="4" TextChanged="TextBox_TextChanged" x:Name="H1" Uid="3"></TextBox>
-        <TextBox Grid.Row="3" Grid.Column="1" TextChanged="TextBox_TextChanged" x:Name="X2" Uid="4"></TextBox>
-        <TextBox Grid.Row="3" Grid.Column="2" TextChanged="TextBox_TextChanged" x:Name="Y2" Uid="5"></TextBox>
-        <TextBox Grid.Row="3" Grid.Column="3" TextChanged="TextBox_TextChanged" x:Name="Z2" Uid="6"></TextBox>
-        <TextBox Grid.Row="3" Grid.Column="4" TextChanged="TextBox_TextChanged" x:Name="H2" Uid="7"></TextBox>
+        <TextBox Grid.Row="2" Grid.Column="1" TextChanged="TextBoxCoord_TextChanged" x:Name="X1" Uid="0"></TextBox>
+        <TextBox Grid.Row="2" Grid.Column="2" TextChanged="TextBoxCoord_TextChanged" x:Name="Y1" Uid="1"></TextBox>
+        <TextBox Grid.Row="2" Grid.Column="3" TextChanged="TextBoxCoord_TextChanged" x:Name="Z1" Uid="2"></TextBox>
+        <TextBox Grid.Row="2" Grid.Column="4" TextChanged="TextBoxHeight_TextChanged" x:Name="H1" Uid="3"></TextBox>
+        <TextBox Grid.Row="3" Grid.Column="1" TextChanged="TextBoxCoord_TextChanged" x:Name="X2" Uid="4"></TextBox>
+        <TextBox Grid.Row="3" Grid.Column="2" TextChanged="TextBoxCoord_TextChanged" x:Name="Y2" Uid="5"></TextBox>
+        <TextBox Grid.Row="3" Grid.Column="3" TextChanged="TextBoxCoord_TextChanged" x:Name="Z2" Uid="6"></TextBox>
+        <TextBox Grid.Row="3" Grid.Column="4" TextChanged="TextBoxHeight_TextChanged" x:Name="H2" Uid="7"></TextBox>
         <Button x:Name="buttonCalculate" IsEnabled="False" Grid.Row="4" Grid.Column="4" Click="ButtonCalculate_Click" >Calcular Colisión</Button>
 
     </Grid>
